k8s-concepts-lab-2/03-service.yaml
# Service (ClusterIP) -> trỏ vào mọi Pod có label app=web (do Deployment web tạo ra)
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: lab2
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
