k8s-concepts-lab-2/10-argocd-ingress.yaml
# Ingress -> rule routing: host argocd.thanhlam.online -> Service ArgoCD server, HTTPS qua cert-manager
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd-thanhlam
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-thanhlam
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.thanhlam.online
      secretName: argocd-thanhlam-online-tls
  rules:
    - host: argocd.thanhlam.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-argocd-thanhlam-server
                port:
                  number: 80
